# archminer

./: .gitignore  README.md  pyproject.toml
archminer/: __about__.py  __init__.py  cleanup.py  cli.py  layout.py
tests/: test_cleanup.py
tests/fixtures/: paragraphs_bad.txt  paragraphs_good.txt
